@@ -18,5 +18,6 @@
     = render :partial => "layouts/tabbed"
     = render :partial => "layouts/footer"
     %script{:type => "text/javascript"}
+      = "crm.base_url = '#{Setting.base_url}';" unless Setting.base_url.blank?
       = get_browser_timezone_offset
       = yield :javascript_epilogue
